2005-03-07  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Shlibs.pm, Package.pm, Selfupdate.pm: Moved db files to
	%p/var/lib/fink

2005-03-07  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: remove app link in /Applications/Fink if it
	still exists.

2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: Invert meaning of choose_mirrors return (true
	means unchanged)

2005-03-03  Daniel Macks  <dmacks@netspace.org>

	* Configure.pm: Add boolean return value to choose_mirrors, indicating if mirror selections are changed

2005-03-02  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm, Notify.pm: Fix $VERSION for emacs paren balancer.

2005-03-01  Daniel Macks  <dmacks@netspace.org>

	* Notify/QuickSilver.pm: thought it was the Say module. Corrected
	to QuickSilver.
	* Notify/Growl.pm: Simplify do_notify
	* Notify/*.pm: Fix $VERSION for emacs paren balancer.
	* Notify/QuickSilver.pm, Notify/Say.pm, Notify/Syslog.pm: use
	package global variable for Unix command. Improved error checking
	during writing to pipe.

2005-02-28  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Improved wording for scorllkeeper misuse warnings.

2005-02-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Services.pm: Repair dumpinfo under perl 5.6 (thanks to Martin 
	Costabel for the fix)
	* PkgVersion.pm: Improved error message for buildlock failure.

2005-02-28  Justin F. Hallett  <thesin@users.sourceforge.net>

	* VirtPackage.pm: Added Growl 0.6 detection

2005-02-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: Enable BuildConflicts when running "fink install" (not
	just when running "fink build")
	
2005-02-27  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Better scoping and more flexible
	handling of Config options for automatic validation with -m
	* Engine.pm: Allow -m for 'fink update'. Allow synonyms for fink
	cmds when checking whether -m is allowed.
